# clicon

./: CHANGELOG  COPYING  Makefile.in  README.doxygen  README.md  clicon.conf.cpp.cpp  clicon.mk.cpp  configure  configure.ac
apps/: Makefile.in
apps/cli/: Makefile.in  cli_common.c  cli_common.h  cli_generate.c  cli_generate.h  cli_handle.c  cli_handle.h  cli_main.c  cli_plugin.c  cli_plugin.h  clicon_cli.h  clicon_cli_api.h  clicon_cli_plugin.h
apps/config/: Makefile.in  clicon_backend.h  clicon_backend_api.h  clicon_backend_plugin.h  config_client.c  config_client.h  config_commit.c  config_commit.h  config_dbdep.c  config_dbdep.h  config_dbdiff.c  config_dbdiff.h  config_handle.c  config_handle.h  config_lib.c  config_lib.h  config_lock.c  config_lock.h  config_main.c  config_plugin.c  config_plugin.h  config_socket.c  config_socket.h
apps/dbctrl/: Makefile.in  dbctrl_main.c
apps/netconf/: Makefile.in  clicon_netconf.h  netconf.dtd  netconf_filter.c  netconf_filter.h  netconf_hello.c  netconf_hello.h  netconf_lib.c  netconf_lib.h  netconf_main.c  netconf_plugin.c  netconf_plugin.h  netconf_rpc.c  netconf_rpc.h
doc/: Doxyfile  FAQ.txt  Makefile.in  README
etc/: Makefile.in
examples/: Makefile.in  README  clicon.conf.in
examples/clicon_yang/: Dockerfile  Makefile.in  README  clicon_yang.conf.local  clicon_yang.yang  clicon_yang_cli.cli  script.sh  start.sh
examples/datamodel/: Makefile.in  README  clicon.conf.in  datamodel.conf.local  datamodel.key  datamodel.spec  datamodel.yang  datamodel_backend.c  datamodel_cli.c  datamodel_cli.cli  extmodel.yang
examples/hello/: Makefile.in  README  clicon.conf.in  datamodel.spec  hello.conf.local  hello.yang  hello_backend.c  hello_cli.c  hello_cli.cli  hello_netconf.c
examples/ntp/: Makefile  Makefile.in  clicon.conf  clicon.conf.in  ntp.conf.local  ntp.spec  ntp.yang  ntp_backend.c  ntp_cli.c  ntp_cli.cli  ntp_netconf.c
examples/routing/: #Makefile#  Makefile  Makefile.in  Makefile~  ietf-ipv4-unicast-routing@2014-10-26.yang  ietf-ipv6-unicast-routing@2014-10-26.yang  ietf-routing@2014-10-26.yang  routing.conf  routing.conf.local  routing.conf.local~  routing.yang  routing.yang~  routing@2014-10-26.yang~  routing_backend.c  routing_cli.cli  routing_cli.cli~  routing_netconf.c
include/: Makefile.in  clicon_config.h.in  clicon_custom.h
lang/: Makefile  Makefile.in
lang/python/: Makefile  Makefile.in  clicon.py  pyclicon.c  pyclicon.h  pyclicon_db.c  pyclicon_err.c  pyclicon_err.h  pyclicon_lib.h  pyclicon_log.c  pyclicon_log.h  pyclicon_options.c  pyclicon_options.h
lang/python/backend/: Makefile  Makefile.in  cliconbackend.py  py_backend.c  pyclicon_backend.c
lang/python/cli/: Makefile  Makefile.in  cliconcli.py  py_cli.c
lang/python/lib/: Makefile  Makefile.in  cligenmod.c  cligenmod.h  handle.c  handle.h  libpyclicon.h  py23.c  py23.h  syspath.c  syspath.h
lib/: Makefile.in
lib/clicon/: Makefile.in  clicon.h  clicon.h.in  clicon_buf.h  clicon_chunk.h  clicon_db.h  clicon_db2txt.h  clicon_dbmatch.h  clicon_dbspec_key.h  clicon_dbspec_parsetree.h  clicon_dbspec_xxx.h  clicon_dbutil.h  clicon_dbvars.h  clicon_err.h  clicon_event.h  clicon_file.h  clicon_handle.h  clicon_hash.h  clicon_log.h  clicon_lvalue.h  clicon_lvmap.h  clicon_mem.h  clicon_options.h  clicon_plugin.h  clicon_proc.h  clicon_proto.h  clicon_proto_client.h  clicon_proto_encode.h  clicon_qdb.h  clicon_queue.h  clicon_sha1.h  clicon_sig.h  clicon_spec.h  clicon_string.h  clicon_xml.h  clicon_xml_db.h  clicon_xml_map.h  clicon_xsl.h  clicon_yang.h  clicon_yang2key.h  (+5 more)
lib/src/: Makefile.in  clicon_buf.c  clicon_chunk.c  clicon_db.c  clicon_db2txt.l  clicon_db2txt.y  clicon_db2txt.y.h  clicon_dbmatch.c  clicon_dbspec.h  clicon_dbspec.l  clicon_dbspec.y  clicon_dbspec_key.c  clicon_dbspec_parsetree.c  clicon_dbspec_xxx.c  clicon_dbutil.c  clicon_dbvars.c  clicon_dbvars.l  clicon_dbvars.y  clicon_err.c  clicon_event.c  clicon_file.c  clicon_handle.c  clicon_hash.c  clicon_log.c  clicon_lvalue.c  clicon_lvmap.c  clicon_options.c  clicon_plugin.c  clicon_proc.c  clicon_proto.c  clicon_proto_client.c  clicon_proto_encode.c  clicon_qdb.c  clicon_sha1.c  clicon_sig.c  clicon_spec.c  clicon_string.c  clicon_xml.c  clicon_xml_db.c  clicon_xml_map.c  (+18 more)
